# uab-scholars-lookup

./: .gitignore  CHANGELOG.md  README.md  UAB_Scholars_API_README.md  cdtr_collaboration_analysis.py  cdtr_collaboration_pull.py  cleaned_faculty_names.txt  debug_faculty.py  faculty_fullnames.py  faculty_fullnames_all_gimpop.py  fetch_gimpop_profiles.py  generate_biosketches.py  generate_biosketches_txt.py  generate_gimpop_biosketches.py  generate_gimpop_biosketches_llm.py  gimpop-faculty.txt  openwebui_uab_scholars.py  openwebui_uab_scholars_stripped.py  parse_cvs.py  parse_gimpop_faculty.py  pull_master_scholars_by_dept_concurrent.py  pull_master_scholars_by_faculty_list.py  pull_scholar_profile_by_user_csvs.py  pyproject.toml  pytest.ini  requirements.txt  scholars_api_shim.py  scholars_profile_lookup.py  scrape_faculty_photos.py  search_by_department_concurrent.py  search_by_research_interest.py  sync_test.py  test.py  test_api_connection.py  test_cancer_experts.py  test_count_faculty.py  test_department.py  test_diabetes_search.py  test_direct_api.py  test_grants.py  (+11 more)
.github/workflows/: ci.yml
CDTR Members.CVs/: Austin Heather CV 2-25-2025.doc  Gower CV 072424.doc  Presley_CV_5.2.25.doc  SylvieMrugCV_current.doc  hill cv 5-25.doc
api/: fetch_scholar.py
src/uab_scholars/: __init__.py  cli.py  client.py  utils.py
tests/: test_utils.py
